<resources>
    <string name="app_name">Transformers</string>

    <string name="battle">Battle</string>
    <string name="battles">Battles</string>
    <string name="winning_team">Winning team</string>
    <string name="tie">Tie</string>
    <string name="survivor">Survivors from the losing team</string>
    <string name="survivors">Survivors</string>
    <string name="no_survivor">No Survivor</string>
    <string name="number_battle">Number of battles before ending by special rule</string>
    <string name="name">Name</string>
    <string name="team">Team</string>
    <string name="strength">Strength</string>
    <string name="intelligence">Intelligence</string>
    <string name="speed">Speed</string>
    <string name="endurance">Endurance</string>
    <string name="rank">Rank</string>
    <string name="courage">Courage</string>
    <string name="firepower">Firepower</string>
    <string name="skill">Skill</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="autobot">Autobot</string>
    <string name="decepticon">Decepticon</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
</resources>
